src/objects/FW_Rating__c.object
<CustomObject>
    <fields>
        <fullName>FullName__c</fullName>
        <formula>CreatedBy.FirstName &amp; &quot; &quot; &amp;  CreatedBy.LastName</formula>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <label>Rate</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Text__c</fullName>
        <label>Text</label>
        <type>TextArea</type>
    </fields>
    <label>FW_Rating</label>
    <nameField>
        <label>FW_Comment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FW_Ratings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>